--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="flip-scroll"> 
         <table class="tablazat">
             <thead>
-                <tr id="sor">
+                <tr class="sor">
                     <td width="100px">HELYE</td>
                     <td>1</td>
                     <td>2</td>
@@ -135,10 +135,10 @@
         </table>
         </div>
     </h3>
-    <button onclick="random(), realTimeCode()" class="animatedbtn">VÉLETLENSZERŰ KÓD</button>
+    <button onclick="random(), realTimeCode()" class="animatedbtn", id="random">VÉLETLENSZERŰ KÓD</button>
     <p id="realTime">A kódjaid így fognak kinézni: <span id="codePreview">_____-_____-_____-_____</span></p>
     <h5 id="info">MINDEN OSZLOPBAN VÁLASSZ VALAMIT A MEGFELELŐ KÓD GENERÁLÁSÁHOZ</h3><!--<br>-->
-        <button onclick="/*generate500(), generate(),*/ auto(), pieces(), copyToClipboard(kodok)" class="animatedbtn">KÓDOK GENERÁLÁSA ÉS MÁSOLÁSA</button>
+        <button onclick="/*generate500(), generate(),*/ auto(), pieces(), copyToClipboard(kodok)" class="animatedbtn", id="generate">KÓDOK GENERÁLÁSA ÉS MÁSOLÁSA</button>
         <!--<br><button onclick="display()">SHOW AND HIDE CODES</button>
         <br>-->
         <!--<button onclick="copyToClipboard(kodok)">COPYING CODES</button>-->
