--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="pepeclown.png">
 </head>
 
-<body>
+<body id="body">
     <h1 id="focim">20 KARAKTERES <br> KÓD GENERÁTOR</h1>
         <div style="display: inline;">
             <p>Darabszám:</p>
